...
          selected: { color: colors.text, fontWeight: "600" },
        }}
        indicatorColor={colors.backgroundElement}
      >
        <NativeTabs.Trigger name="(home)">
          <NativeTabs.Trigger.Icon sf={{ default: "house", selected: "house.fill" }} md="home" />
          <NativeTabs.Trigger.Label>{t`ホーム`}</NativeTabs.Trigger.Label>
        </NativeTabs.Trigger>

        <NativeTabs.Trigger name="tab-a">
          <NativeTabs.Trigger.Icon
            sf={{ default: "a.circle", selected: "a.circle.fill" }}
            md="looks_one"
...
